[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/sprites/main_menu/label_options.png" type="Texture" id=1]
[ext_resource path="res://assets/sounds/AreYouReady_Martian.WAV" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/musics/Overcooked - Main Menu Remix.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/main_menu/label_continue.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/main_menu/label_new_game.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/fxs/Select 3 (Blub).wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/fxs/Morphine - Loose Strings.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sprites/main_menu/version.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/COMICNEUE_BOLD.OTF" type="DynamicFontData" id=9]
[ext_resource path="res://hud/overlays/pause_break.tscn" type="PackedScene" id=10]
[ext_resource path="res://hud/menus/popup/options.tscn" type="PackedScene" id=11]
[ext_resource path="res://hud/menus/main_menu.gd" type="Script" id=12]
[ext_resource path="res://hud/menus/title_screen.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 73
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=2]
resource_name = "rainbow"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.921569, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.0313726, 0, 1, 1 ), Color( 0.921569, 1, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rainbow"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "rainbow"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "rainbow"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Audio/NewGameSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.46229, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 13 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.113725, 0.490196, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
margin_right = 1010.0
margin_bottom = 523.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 80.0
margin_right = 890.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 770.0
margin_bottom = 74.0
rect_min_size = Vector2( 770, 74 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "This is not Overcooked"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/VBoxContainer/Title"]
autoplay = "rainbow"
anims/rainbow = SubResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 78.0
margin_right = 770.0
margin_bottom = 280.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="NewGame" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_right = 770.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 577, 37 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/VBoxContainer/MenuOptions/NewGame"]
anims/idle = SubResource( 4 )
anims/rainbow = SubResource( 5 )

[node name="Continue" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 74.0
margin_right = 770.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 577, 37 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/VBoxContainer/MenuOptions/Continue"]
anims/idle = SubResource( 6 )
anims/rainbow = SubResource( 7 )

[node name="Options" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 148.0
margin_right = 770.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 577, 37 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/VBoxContainer/MenuOptions/Options"]
anims/idle = SubResource( 8 )
anims/rainbow = SubResource( 9 )

[node name="VersionNote" type="TextureRect" parent="MainMenu/VBoxContainer"]
margin_top = 284.0
margin_right = 770.0
margin_bottom = 363.0
texture = ExtResource( 8 )

[node name="Select" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 6 )
bus = "SFXS"

[node name="Transition" type="AnimationPlayer" parent="MainMenu"]
autoplay = "in"
anims/in = SubResource( 10 )
anims/out = SubResource( 11 )

[node name="Options" parent="." instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 419.0
margin_top = 259.0
margin_right = 605.0
margin_bottom = 341.0

[node name="PauseBreak" parent="." instance=ExtResource( 10 )]

[node name="ColorRect" parent="PauseBreak/CanvasLayer" index="0"]
color = Color( 0.113725, 0.172549, 0.0980392, 0 )

[node name="Audio" type="Node" parent="."]

[node name="NewGameSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
bus = "SFXS"

[node name="NotImplementedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "SFXS"

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 12 )
[connection signal="focus_entered" from="MainMenu/VBoxContainer/MenuOptions/NewGame" to="MainMenu" method="_on_NewGame_focus_entered"]
[connection signal="focus_exited" from="MainMenu/VBoxContainer/MenuOptions/NewGame" to="MainMenu" method="_on_NewGame_focus_exited"]
[connection signal="mouse_entered" from="MainMenu/VBoxContainer/MenuOptions/NewGame" to="MainMenu" method="_on_NewGame_mouse_entered"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="focus_entered" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="MainMenu" method="_on_Continue_focus_entered"]
[connection signal="focus_exited" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="MainMenu" method="_on_Continue_focus_exited"]
[connection signal="mouse_entered" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="MainMenu" method="_on_Continue_mouse_entered"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_pressed"]
[connection signal="focus_entered" from="MainMenu/VBoxContainer/MenuOptions/Options" to="MainMenu" method="_on_Options_focus_entered"]
[connection signal="focus_exited" from="MainMenu/VBoxContainer/MenuOptions/Options" to="MainMenu" method="_on_Options_focus_exited"]
[connection signal="mouse_entered" from="MainMenu/VBoxContainer/MenuOptions/Options" to="MainMenu" method="_on_Options_mouse_entered"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="animation_finished" from="MainMenu/Transition" to="." method="_on_Transition_animation_finished"]

[editable path="PauseBreak"]
